# ocp-provenance

./: README.md  pyproject.toml
benchmarks/: bench_journal.py
examples/: demo_provenance_viewer.py  demo_simply.py
src/ocp-provenance/: __init__.py  framewalker.py  history.py  journal.py  registry.py
src/ocp_provenance/: __init__.py  _types.py  bridge.py  journal.py
tests/: debug.py  debug_entries.py  debug_provenance.py  test_all_shapes.py  test_integration.py
